- Added player stats display.

--- a/views/R6_attac_icons.ejs
+++ b/views/R6_attac_icons.ejs
@@ -34,7 +34,7 @@
 
 <br>
 
-<button id="R6_attac/Recruit.png" data-scale=2.5 class="tank_select" data-toggle="tooltip" data-no_color="true" title="<%=l('Recruitk')%>">
+<button id="R6_attac/Recruit.png" data-scale=2.5 class="tank_select" data-toggle="tooltip" data-no_color="true" title="<%=l('Recruit')%>">
 	<div class="R6_attac_icons R6_attac_icons-Recruit inline"></div><span>0</span>
 </button>
 <button id="R6_attac/Buck.png" data-scale=2.5 class="tank_select" data-toggle="tooltip" data-no_color="true" title="<%=l('Buck')%>">
