--- a/views/about_en.ejs
+++ b/views/about_en.ejs
@@ -109,7 +109,7 @@
 			<li>Etna99_ for the Finnish translation.
 			<li>Jackhammer, Tomsa for the contour icons from his <a href="http://forum.worldoftanks.eu/index.php?/topic/457860-0914-tomsas-contour-icons-mod-jackhammers-style/">mod</a></li>
 			<li><a href='https://github.com/'>GitHub</a> for hosting the code and part of the website.</li>
-			<li>Wargaming, Obsidian, Riot games, Blizzard, Valve, Crytek and Offworld Industries for the their fantastic games and assets.
+			<li>Wargaming, Obsidian, Riot games, Blizzard, Valve, Ubisoft, Crytek and Offworld Industries for the their fantastic games and assets.
 			</ul>
 
 			<h3>Donators, in no particular order</h3>
