--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,5 +1,5 @@
 <br />
-<div style="height: 50px"></div>
+<div style="height: 50px;"></div>
 <nav id="footer" class="navbar navbar-default navbar-inverse">
 	<ul class="nav navbar-nav">
 		<li class="divider-vertical hidden-xs"></li>
@@ -42,4 +42,9 @@
 			});
 		</script>
 	</ul>
+	
+	<ul class="nav navbar-nav navbar-right" style="margin:0px;">
+		<li id="about"><a href="about.html"><%=l('About')%></a></li>
+	</ul>
+	
 </nav>
