--- a/views/planner3.ejs
+++ b/views/planner3.ejs
@@ -228,6 +228,9 @@
 				<% } %>
 				<button id="nuke_room" class="btn btn-default navbar-btn" data-toggle="tooltip" title="<%=l('Empty room')%>">
 					<div class="icon icon-bomb"></div>
+				</button>
+				<button id="disable_dragging" style="border-radius: 0px;" class="btn btn-default navbar-btn" data-toggle="tooltip" data-disable="<%=l('Disable dragging')%>" data-enable="<%=l('Enable dragging')%>" title="<%=l('Disable dragging')%>">
+					<div class="icon icon-disable_dragging"></div>
 				</button>				
 				</div>
 			</ul>
