--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,6 +6,14 @@ div#preload { display: none; }
 	border: 0;
 }
 
+.beta_button {
+	 background-image: url('beta_ribbon.png') !important;
+	 background-size: contain !important;
+	 background-position: right top !important;
+	 background-repeat: no-repeat !important;
+	 width:130px;
+}
+
 .jumbotron, .jumbotron p, .jumbotron ol, .jumbotron ul {
 	font-size: 14px;
 	font-family: 'Open Sans', sans-serif;
@@ -31,7 +39,7 @@ div#preload { display: none; }
 	min-height: calc(100vh - 148px);
 }
 
-html, body {position: absolute; min-width:100%; min-height: 100%;}
+html, body {position: absolute; min-width:100%; min-height: 100%; padding: 0px; margin:  0px;}
 
 #footer {
 	position: absolute;
@@ -519,7 +527,7 @@ div.inline { display: inline-block; vertical-align: middle; }
   width: 18px;
   height: 18px;
 }
-.icon-link {
+.icon-line_icon {
   background-position: -0px -424px;
   width: 22px;
   height: 22px;
@@ -604,393 +612,403 @@ div.inline { display: inline-block; vertical-align: middle; }
   width: 22px;
   height: 22px;
 }
-.icon-dot_icon {
+.icon-disable_dragging {
   background-position: -0px -798px;
   width: 22px;
   height: 22px;
 }
-.icon-dotted_arrow {
+.icon-dot_icon {
   background-position: -0px -820px;
   width: 22px;
   height: 22px;
 }
-.icon-dotted_line {
+.icon-dotted_arrow {
   background-position: -0px -842px;
   width: 22px;
   height: 22px;
 }
-.icon-draw_circle_icon {
+.icon-dotted_line {
   background-position: -0px -864px;
   width: 22px;
   height: 22px;
 }
-.icon-draw_circle_radius_icon {
+.icon-draw_circle_icon {
   background-position: -0px -886px;
   width: 22px;
   height: 22px;
 }
-.icon-eraser {
+.icon-draw_circle_radius_icon {
   background-position: -0px -908px;
   width: 22px;
   height: 22px;
 }
-.icon-export {
+.icon-enable_dragging {
   background-position: -0px -930px;
   width: 22px;
   height: 22px;
 }
-.icon-aw_icons {
+.icon-eraser {
   background-position: -0px -952px;
   width: 22px;
   height: 22px;
 }
-.icon-floppy {
+.icon-export {
   background-position: -0px -974px;
   width: 22px;
   height: 22px;
 }
-.icon-folder {
+.icon-aw_icons {
   background-position: -0px -996px;
   width: 22px;
   height: 22px;
 }
-.icon-R6_icons {
+.icon-floppy {
   background-position: -0px -1018px;
   width: 22px;
   height: 22px;
 }
-.icon-archive_icon {
+.icon-folder {
   background-position: -0px -1040px;
   width: 22px;
   height: 22px;
 }
-.icon-grid_icon {
+.icon-R6_icons {
   background-position: -0px -1062px;
   width: 22px;
   height: 22px;
 }
-.icon-hots_icons {
+.icon-archive_icon {
   background-position: -0px -1084px;
   width: 22px;
   height: 22px;
 }
-.icon-bin {
+.icon-grid_icon {
   background-position: -0px -1106px;
   width: 22px;
   height: 22px;
 }
-.icon-line_T {
+.icon-hots_icons {
   background-position: -0px -1128px;
   width: 22px;
   height: 22px;
 }
-.icon-line_icon {
+.icon-bin {
   background-position: -0px -1150px;
   width: 22px;
   height: 22px;
 }
-.icon-area {
+.icon-line_T {
   background-position: -0px -1172px;
   width: 22px;
   height: 22px;
 }
-.icon-blitz_icons {
+.icon-area {
   background-position: -0px -1194px;
   width: 22px;
   height: 22px;
 }
-.icon-lock {
+.icon-link {
   background-position: -0px -1216px;
   width: 22px;
   height: 22px;
 }
-.icon-lock_camera {
+.icon-blitz_icons {
   background-position: -0px -1238px;
   width: 22px;
   height: 22px;
 }
-.icon-arrow {
+.icon-lock {
   background-position: -0px -1260px;
   width: 22px;
   height: 22px;
 }
-.icon-lol_icons {
+.icon-lock_camera {
   background-position: -0px -1282px;
   width: 22px;
   height: 22px;
 }
-.icon-bomb {
+.icon-arrow {
   background-position: -0px -1304px;
   width: 22px;
   height: 22px;
 }
-.icon-map_icon {
+.icon-lol_icons {
   background-position: -0px -1326px;
   width: 22px;
   height: 22px;
 }
-.icon-circle_icon {
+.icon-bomb {
   background-position: -0px -1348px;
   width: 22px;
   height: 22px;
 }
-.icon-move {
+.icon-map_icon {
   background-position: -0px -1370px;
   width: 22px;
   height: 22px;
 }
-.icon-note {
+.icon-circle_icon {
   background-position: -0px -1392px;
   width: 22px;
   height: 22px;
 }
-.icon-paste {
+.icon-move {
   background-position: -0px -1414px;
   width: 22px;
   height: 22px;
 }
-.icon-patreon {
+.icon-note {
   background-position: -0px -1436px;
   width: 22px;
   height: 22px;
 }
-.icon-paypal {
+.icon-paste {
   background-position: -0px -1458px;
   width: 22px;
   height: 22px;
 }
-.icon-pencil {
+.icon-patreon {
   background-position: -0px -1480px;
   width: 22px;
   height: 22px;
 }
-.icon-ping_icon {
+.icon-paypal {
   background-position: -0px -1502px;
   width: 22px;
   height: 22px;
 }
-.icon-clear {
+.icon-pencil {
   background-position: -0px -1524px;
   width: 22px;
   height: 22px;
 }
-.icon-polygon {
+.icon-ping_icon {
   background-position: -0px -1546px;
   width: 22px;
   height: 22px;
 }
-.icon-protoss {
+.icon-clear {
   background-position: -0px -1568px;
   width: 22px;
   height: 22px;
 }
-.icon-rectangle {
+.icon-polygon {
   background-position: -0px -1590px;
   width: 22px;
   height: 22px;
 }
-.icon-recticle_icon {
+.icon-protoss {
   background-position: -0px -1612px;
   width: 22px;
   height: 22px;
 }
-.icon-redo {
+.icon-rectangle {
   background-position: -0px -1634px;
   width: 22px;
   height: 22px;
 }
-.icon-remove_slide {
+.icon-recticle_icon {
   background-position: -0px -1656px;
   width: 22px;
   height: 22px;
 }
-.icon-ruler_icon {
+.icon-redo {
   background-position: -0px -1678px;
   width: 22px;
   height: 22px;
 }
-.icon-save {
+.icon-remove_slide {
   background-position: -0px -1700px;
   width: 22px;
   height: 22px;
 }
-.icon-save_as {
+.icon-ruler_icon {
   background-position: -0px -1722px;
   width: 22px;
   height: 22px;
 }
-.icon-sc2 {
+.icon-save {
   background-position: -0px -1744px;
-  width: 21px;
+  width: 22px;
   height: 22px;
 }
-.icon-clear_area {
+.icon-save_as {
   background-position: -0px -1766px;
   width: 22px;
   height: 22px;
 }
-.icon-select {
+.icon-sc2 {
   background-position: -0px -1788px;
-  width: 22px;
+  width: 21px;
   height: 22px;
 }
-.icon-clear_circle {
+.icon-clear_area {
   background-position: -0px -1810px;
   width: 22px;
   height: 22px;
 }
-.icon-send_to_link_22 {
+.icon-select {
   background-position: -0px -1832px;
   width: 22px;
   height: 22px;
 }
-.icon-clear_curve {
+.icon-clear_circle {
   background-position: -0px -1854px;
   width: 22px;
   height: 22px;
 }
-.icon-squad_icons {
+.icon-send_to_link_22 {
   background-position: -0px -1876px;
   width: 22px;
   height: 22px;
 }
-.icon-clear_draw {
+.icon-clear_curve {
   background-position: -0px -1898px;
   width: 22px;
   height: 22px;
 }
-.icon-clear_icon {
+.icon-squad_icons {
   background-position: -0px -1920px;
   width: 22px;
   height: 22px;
 }
-.icon-terran {
+.icon-clear_draw {
   background-position: -0px -1942px;
   width: 22px;
   height: 22px;
 }
-.icon-text_icon {
+.icon-clear_icon {
   background-position: -0px -1964px;
   width: 22px;
   height: 22px;
 }
-.icon-text_on_background {
+.icon-terran {
   background-position: -0px -1986px;
   width: 22px;
   height: 22px;
 }
-.icon-clear_line {
+.icon-text_icon {
   background-position: -0px -2008px;
   width: 22px;
   height: 22px;
 }
-.icon-undo {
+.icon-text_on_background {
   background-position: -0px -2030px;
   width: 22px;
   height: 22px;
 }
-.icon-unlock {
+.icon-clear_line {
   background-position: -0px -2052px;
   width: 22px;
   height: 22px;
 }
-.icon-unlock_camera {
+.icon-undo {
   background-position: -0px -2074px;
   width: 22px;
   height: 22px;
 }
-.icon-clear_note {
+.icon-unlock {
   background-position: -0px -2096px;
   width: 22px;
   height: 22px;
 }
-.icon-warface_icons {
+.icon-unlock_camera {
   background-position: -0px -2118px;
   width: 22px;
   height: 22px;
 }
-.icon-clear_polygon {
+.icon-clear_note {
   background-position: -0px -2140px;
   width: 22px;
   height: 22px;
 }
-.icon-clear_rectangle {
+.icon-warface_icons {
   background-position: -0px -2162px;
   width: 22px;
   height: 22px;
 }
-.icon-wot_icons {
+.icon-clear_polygon {
   background-position: -0px -2184px;
   width: 22px;
   height: 22px;
 }
-.icon-clear_selected {
+.icon-clear_rectangle {
   background-position: -0px -2206px;
   width: 22px;
   height: 22px;
 }
-.icon-wows_icons {
+.icon-wot_icons {
   background-position: -0px -2228px;
   width: 22px;
   height: 22px;
 }
-.icon-clear_text {
+.icon-clear_selected {
   background-position: -0px -2250px;
   width: 22px;
   height: 22px;
 }
-.icon-zerg {
+.icon-wows_icons {
   background-position: -0px -2272px;
   width: 22px;
   height: 22px;
 }
-.icon-cs {
+.icon-clear_text {
   background-position: -0px -2294px;
   width: 22px;
   height: 22px;
 }
-.icon-de {
+.icon-zerg {
   background-position: -0px -2316px;
   width: 22px;
   height: 22px;
 }
-.icon-en {
+.icon-cs {
   background-position: -0px -2338px;
   width: 22px;
   height: 22px;
 }
-.icon-es {
+.icon-de {
   background-position: -0px -2360px;
   width: 22px;
   height: 22px;
 }
-.icon-fi {
+.icon-en {
   background-position: -0px -2382px;
   width: 22px;
   height: 22px;
 }
-.icon-fr {
+.icon-es {
   background-position: -0px -2404px;
   width: 22px;
   height: 22px;
 }
-.icon-nl {
+.icon-fi {
   background-position: -0px -2426px;
   width: 22px;
   height: 22px;
 }
-.icon-pl {
+.icon-fr {
   background-position: -0px -2448px;
   width: 22px;
   height: 22px;
 }
-.icon-ru {
+.icon-nl {
   background-position: -0px -2470px;
   width: 22px;
   height: 22px;
 }
-.icon-sr {
+.icon-pl {
   background-position: -0px -2492px;
+  width: 22px;
+  height: 22px;
+}
+.icon-ru {
+  background-position: -0px -2514px;
+  width: 22px;
+  height: 22px;
+}
+.icon-sr {
+  background-position: -0px -2536px;
   width: 22px;
   height: 22px;
 }
