--- a/views/R6_def_icons.ejs
+++ b/views/R6_def_icons.ejs
@@ -34,7 +34,7 @@
 
 <br>
 
-<button id="R6_def/Recruit.png" data-scale=2.5 class="tank_select" data-toggle="tooltip" data-no_color="true" title="<%=l('Recruitk')%>">
+<button id="R6_def/Recruit.png" data-scale=2.5 class="tank_select" data-toggle="tooltip" data-no_color="true" title="<%=l('Recruit')%>">
 	<div class="R6_def_icons R6_def_icons-Recruit inline"></div><span>0</span>
 </button>
 <button id="R6_def/Frost.png" data-scale=2.5 class="tank_select" data-toggle="tooltip" data-no_color="true" title="<%=l('Frost')%>">
