--- a/views/common_headers.ejs
+++ b/views/common_headers.ejs
@@ -72,6 +72,13 @@
   ga('send', 'pageview');
 </script>
 <%}%>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-9117810685246622",
+    enable_page_level_ads: true
+  });
+</script>
 
 <link rel="preload" href="<%=static_host%>/stylesheets/sprite.png" as="image">
 <link rel="preload" href="<%=static_host%>/stylesheets/fonts/icomoon.ttf" as="font">
