--- a/views/planner.ejs
+++ b/views/planner.ejs
@@ -128,6 +128,9 @@
 				</button>		
 				<button id="lock_camera" style='border-radius: 0px;' class="btn btn-default navbar-btn" data-toggle="tooltip" title="<%=l('locks the view (zoom/pan) of all users to yours')%>">
 					<div class="icon icon-lock_camera"></div>
+				</button>
+				<button id="disable_dragging" style="border-radius: 0px;" class="btn btn-default navbar-btn" data-toggle="tooltip" data-disable="<%=l('Disable dragging')%>" data-enable="<%=l('Enable dragging')%>" title="<%=l('Disable dragging')%>">
+					<div class="icon icon-disable_dragging"></div>
 				</button>				
 				</div>
 				</li>
